--- a/templates/frontOffice/default/localpickup/order-invoice-delivery-address.html
+++ b/templates/frontOffice/default/localpickup/order-invoice-delivery-address.html
@@ -15,8 +15,8 @@
                 <span class="postal-code">{$ZIPCODE}</span>
                 <span class="locality">
                     {$CITY},
-                    <span class="country-name">{loop type="country" name="customer.country.info" id=$COUNTRY}{$TITLE}{/loop}</span>{if $STATE},
-                    <span class="state-name">{loop type="state" name="customer.state.info" id=$STATE}{$TITLE}{/loop}</span>
+                    <span class="country-name">{loop type="country" name="customer.country.info" id=$COUNTRY}{$TITLE}{/loop}</span>{if $STATE|default:null},
+                    <span class="state-name">{loop type="state" name="customer.state.info" id=$STATE|default:null}{$TITLE}{/loop}</span>
                     {/if}
                 </span>
             </address>
