--- a/templates/frontOffice/default/localpickup/order-invoice-delivery-address.html
+++ b/templates/frontOffice/default/localpickup/order-invoice-delivery-address.html
@@ -2,7 +2,7 @@
     {loop type="address.local" name="local-delivery-address" id={order attr="delivery_address"}}
         <div class="panel-heading">{intl l="Retrait en magasin" d="localpickup.fo.default"}</div>
         <div class="panel-body">
-            <span class="fn">{loop type="title" name="customer.title.info" id=$TITLE}{$SHORT}{/loop} {$LASTNAME|upper} {$FIRSTNAME|ucwords}</span>
+            <span class="fn">{loop type="title" name="customer.title.info" id=$TITLE|default:0}{$SHORT}{/loop} {$LASTNAME|upper} {$FIRSTNAME|ucwords}</span>
             <span class="org">{$COMPANY}</span>
             <address class="adr">
                 <span class="street-address">{$ADDRESS1}</span><br>
@@ -13,10 +13,10 @@
                     <span class="street-address">{$ADDRESS3}</span><br>
                 {/if}
                 <span class="postal-code">{$ZIPCODE}</span>
-                <span class="locality">
-                    {$CITY},
-                    <span class="country-name">{loop type="country" name="customer.country.info" id=$COUNTRY}{$TITLE}{/loop}</span>{if $STATE|default:null},
-                    <span class="state-name">{loop type="state" name="customer.state.info" id=$STATE|default:null}{$TITLE}{/loop}</span>
+                <span class="locality">{$CITY}</span><br>
+                <span class="country">
+                    <span class="country-name">{loop type="country" name="customer.country.info" id=$COUNTRY|default:0}{$TITLE}{/loop}</span>{if $STATE|default:0},
+                    <span class="state-name">{loop type="state" name="customer.state.info" id=$STATE|default:0}{$TITLE}{/loop}</span>
                     {/if}
                 </span>
             </address>
