feat: template email + event send email
remove: useless import

feat: translations

refacto: name email

--- a/templates/backOffice/default/module_configuration.html
+++ b/templates/backOffice/default/module_configuration.html
@@ -40,6 +40,10 @@
                             <div class="col-md-12">
                                 {render_form_field field="description" extra_class="wysiwyg" value=$description}
                             </div>
+
+                            <div class="col-md-12">
+                                {render_form_field field="email" extra_class="wysiwyg" value=$email}
+                            </div>
                         </div>
                     {/form}
                 </form>
