Add checkbox in backoffice to send sms

--- a/templates/backOffice/default/module_configuration.html
+++ b/templates/backOffice/default/module_configuration.html
@@ -44,6 +44,9 @@
                             <div class="col-md-12">
                                 {render_form_field field="email" extra_class="wysiwyg" value=$email}
                             </div>
+                            <div class="col-md-12">
+                                {render_form_field field="sms" value=$sms}
+                            </div>
                         </div>
                     {/form}
                 </form>
